# RegIQ

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  render.yaml
agents/gap_analyst/: agent.py  prompts.py  test_gap_analyst.py
agents/impact_mapper/: agent.py  prompts.py  test_impact_mapper.py
agents/legal_parser/: agent.py  prompts.py  test_legal_parser.py
agents/monitor/: agent.py  prompts.py  test_monitor.py
agents/remediation_planner/: agent.py  prompts.py
api/: main.py
api/routes/: health.py  hitl.py  regulations.py  reports.py
assets/: cover-image.html
configs/: config.py
core/: band_client.py  band_config.py  band_utils.py  cascade.py  debug_adapter.py  history.py  llm.py  room_registry.py  settings.py  test_history.py  timing.py
data/company_kb/: sop_access_control.md  sop_data_retention.md  sop_user_deletion.md  team_ownership.md
data/mock_regulations/: apac_cross_border_2026.json  gdpr_amendment_2026.json  sec_cybersecurity_2026.json
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: ActionBar.tsx  ConfirmModal.tsx  HITLReview.tsx  ReportHeader.tsx  StatusBadge.tsx  SummaryBar.tsx  TicketCard.tsx
frontend/src/pages/: DashboardPage.tsx  PipelinePage.tsx  ReviewPage.tsx  (+1 more)
models/: __init__.py  gap.py  impact.py  regulation.py  report.py  requirement.py
rag/: indexer.py  retriever.py
scripts/: demo.py  deploy_aws.sh  seed_kb.py  test_band_config.py  test_llm.py
utils/: loggers.py
