[project]
name = "regiq"
version = "0.1.0"
description = "RegIQ - Regulatory Change Intelligence System | Band of Agents Hackathon 2026"
authors = [{ name = "Moamen Osama (Darko)" }]
requires-python = ">=3.11"

dependencies = [
    # Band SDK (the whole point)
    "band-sdk[langgraph]",
    # LangChain / LangGraph stack
    "langchain>=0.3",
    "langchain-openai>=0.2",     # OpenAI-compat client -> routes to AI/ML API
    "langgraph>=0.2",
    "langchain-community>=0.3",
    "langsmith>=0.2",
    # API layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Vector store (Qdrant Cloud - no Docker needed)
    "qdrant-client>=1.12",
    "langchain-qdrant>=0.2",
    # Data validation
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Utilities
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "rich>=13.0",               # Pretty terminal output for demo
    "typer>=0.12",              # CLI for demo runner
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "core", "models", "rag", "scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
